# gimme-release-notes

./: Cargo.toml  readme.md
src/: main.rs
