[package]
name = "gimme-release-notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
thiserror = "1"
reqwest = "0.11"
clap = "3"
serde_json = "1"
curl = "0.4"
regex = "1"